[gd_scene load_steps=2 format=3 uid="uid://dy7k9v3h2xp5q"]

[ext_resource type="Script" path="res://scripts/ui/level_select.gd" id="1_level_select"]

[node name="LevelSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_level_select")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.25, 0.3, 1)

[node name="TopBar" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 50.0
grow_horizontal = 2

[node name="BackButton" type="Button" parent="TopBar"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
text = "< Back"

[node name="ProfileLabel" type="Label" parent="TopBar"]
layout_mode = 2
size_flags_horizontal = 3
text = "Playing as: Player"
vertical_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 50.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="MapLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "SELECT LEVEL"
horizontal_alignment = 1

[node name="SpacerTop" type="Control" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="Level1Button" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(250, 50)
layout_mode = 2
text = "Level 1"

[node name="Level2Button" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(250, 50)
layout_mode = 2
disabled = true
text = "Level 2 (LOCKED)"

[node name="Level3Button" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(250, 50)
layout_mode = 2
disabled = true
text = "Level 3 (LOCKED)"
